--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "1.0.14"
+    "react-scripts": "^3.2.0"
   },
   "dependencies": {
     "faker": "^4.1.0",
-    "firebase": "^4.5.0",
-    "json2csv": "^3.11.2",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "firebase": "^7.2.0",
+    "json2csv": "^4.5.4",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   },
   "scripts": {
     "start": "react-scripts start",
